# hari2

./: .gitignore  CLAUDE.md  Capstone presentación.md  Makefile  Procfile.dev  README.md  TODO.md  hari_descripción.md 
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  run_worker.py
backend/alembic/: env.py
backend/alembic/versions/: 179414c0c04d_add_api_key_hash.py  3584d4ab05af_add_drive_folders_and_drive_files_tables.py  3621727c113d_add_archived_field_to_jobs.py  37b83d124c0f_add_unique_constraint_to_drive_files.py  553dbe775d34_add_indexes_to_sessions_table.py  601a3f1f225c_add_drive_file_id_to_documents.py  (+6 more)
backend/app/: main.py
backend/app/api/: admin.py  (+6 more)
backend/tests/: test_agent_evaluator.py  test_agent_generator.py  test_agent_graph.py  test_agent_integration.py  test_agent_researcher.py  test_agent_retriever.py  test_agent_router.py  test_agent_state.py  test_agent_stream.py  test_api_admin.py  test_api_agent_query.py  test_api_auth.py  test_api_documents.py  test_api_drive.py  test_api_jobs.py  test_api_key_hashing.py  test_api_query_stream.py  test_api_search.py  test_author_detection.py  test_bot_search.py  test_config.py  test_database.py  test_deps.py  test_drive_service.py  test_drive_sync.py  test_embedder.py  test_extractive_summarizer.py  test_hybrid_search.py  test_integrations_bot_base.py  test_integrations_user_state.py  test_job_queue.py  test_job_worker.py  test_keyword_search.py  test_llm_client.py  test_main.py  test_models_base.py  test_models_document.py  test_models_drive.py  test_models_job.py  test_models_session.py  (+25 more)
(+123 files in other folders)
