[project]
name = "hari"
version = "0.1.0"
description = "Human-Augmented Resource Intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.4",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "trafilatura>=1.6.0",
    "sumy>=0.11.0",
    "nltk>=3.8.1",
    "pypdf2>=3.0.1",
    "langdetect>=1.0.9",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "google-auth>=2.45.0",
    "google-api-python-client>=2.187.0",
    "langgraph>=0.2.0",
    "tavily-python>=0.5.0",
    "python-telegram-bot>=21.0",
    "slack-bolt>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "respx>=0.21.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "reportlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "reportlab>=4.4.7",
    "respx>=0.22.0",
]
